# Eltex-hometasks

./: .gitignore  CMakeLists.txt  Fifth.c  Fourth.c  Six.c
First/: 12.c  4.c
Part1/: Fifth.c  Fifth.txt  Fourth.c
Part1/Fifth/: CMakeLists.txt  Fifth.txt
Part1/First/: 3.c  CMakeLists.txt
Part1/Fourth/: CMakeLists.txt
Part1/Second/: 3.c  CMakeLists.txt
Part1/Third/: 3.c  CMakeLists.txt
Part2/Eight/: CMakeLists.txt  add.h  main  mul.c  sub.c
Part2/Nine/9_1/: CMakeLists.txt
Part2/Nine/9_2/: CMakeLists.txt
Part2/SIx/: CMakeLists.txt  Six.c
Part2/Seven/: CMakeLists.txt  add.c  add.h  div.c  div.h  main  main.c  mul.c  mul.h  myDiv.c  myDiv.h  sub.c  sub.h
Part2/Ten/: CMakeLists.txt  Ten1.c  Ten2.c  Ten3.c
Second/: 1.c  2.c  4.c
Third/: 1.c  2.c  4.c
