cmake_minimum_required(VERSION 3.26)
project(untitled C)

set(CMAKE_C_STANDARD 99)
#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address")
#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=leak")
add_executable(untitled)
        #First/12.c)
        #First/3.c)
        #First/4.c)
        #Second/1.c)
        #Second/2.c)
        #Second/3.c)
        #Second/4.c)
        #Third/1.c)
        #Third/2.c)
        #Third/3.c)
        #Third/4.c)
        #Fourth.c)
        #Part1/Fifth.c)
        #Six.c)