cmake_minimum_required(VERSION 3.26)
project(untitled C)

set(CMAKE_C_STANDARD 23)
#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address")
#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=leak")
add_executable(
        #Part1/First/12.c)
        #Part1/First/3.c)
        #Part1/First/4.c)
        #Part1/Second/1.c)
        #Part1/Second/2.c)
        #Part1/Second/3.c)
        #Part1/Second/4.c)
        #Part1/Third/1.c)
        #Part1/Third/2.c)
        #Part1/Part1/Third/3.c)
        #Part1/Third/4.c)
        #Part1/Fourth.c)
        #Part1/Fifth.c)
        #Part2/Six.c)
        Part2/Seven/main.c
        Part2/Seven/add.c
        Part2/Seven/sub.c
        Part2/Seven/mul.c
        Part2/Seven/div.c
)